{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 18,
  "lineage": "2014a813-5285-2f25-54c9-3272f18267d3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "testInstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e306788ff2473ccb",
            "arn": "arn:aws:ec2:ap-south-1:374479453430:instance/i-0b3788bcda33730cb",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b3788bcda33730cb",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "new1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09175fa6d85a20f51",
            "private_dns": "ip-10-1-0-60.ap-south-1.compute.internal",
            "private_ip": "10.1.0.60",
            "public_dns": "ec2-13-232-19-187.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.232.19.187",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-09dfadb9b473b7792",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a2d16eddd16d1685",
            "tags": {
              "Environment": "Production"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0db4df69ab133dddf"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_22",
            "aws_subnet.subnet_public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:374479453430:internet-gateway/igw-0ae2be0860b7e5000",
            "id": "igw-0ae2be0860b7e5000",
            "owner_id": "374479453430",
            "tags": {
              "Environment": "Production"
            },
            "vpc_id": "vpc-0117ba7193f8f0780"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c00b445abd4037c3",
            "owner_id": "374479453430",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ae2be0860b7e5000",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Production"
            },
            "vpc_id": "vpc-0117ba7193f8f0780"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f56cf80bc25fe44",
            "route_table_id": "rtb-0c00b445abd4037c3",
            "subnet_id": "subnet-0a2d16eddd16d1685"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb_public",
            "aws_subnet.subnet_public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:374479453430:security-group/sg-0db4df69ab133dddf",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0db4df69ab133dddf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_22",
            "name_prefix": "",
            "owner_id": "374479453430",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Production"
            },
            "timeouts": null,
            "vpc_id": "vpc-0117ba7193f8f0780"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:374479453430:subnet/subnet-0a2d16eddd16d1685",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.1.0.0/24",
            "id": "subnet-0a2d16eddd16d1685",
            "map_public_ip_on_launch": true,
            "owner_id": "374479453430",
            "tags": {
              "Environment": "Production"
            },
            "vpc_id": "vpc-0117ba7193f8f0780"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:374479453430:vpc/vpc-0117ba7193f8f0780",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0cce1910176b41751",
            "default_route_table_id": "rtb-02eef4b9d1ba6901f",
            "default_security_group_id": "sg-08c08bbf9c5191827",
            "dhcp_options_id": "dopt-22ea3e49",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0117ba7193f8f0780",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02eef4b9d1ba6901f",
            "owner_id": "374479453430",
            "tags": {
              "Environment": "Production"
            }
          }
        }
      ]
    }
  ]
}